More html and css practice. Added stylesheet for css.

--- a/Jen_CV.html
+++ b/Jen_CV.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<meta charset = "utf-8">
+<title> Jennifer's CV Pratice</title>
+<link rel="stylesheet" href="style.css">
+
 <h1>Jennifer Marine</h1>
 +1 (520) 271-5431 | jam4kg@virigina.edu
 408 Ridge Street
