Adds styling to font doc.

--- a/fonts.html
+++ b/fonts.html
@@ -4,6 +4,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Bevan&family=Josefin+Sans:ital,wght@0,100;0,700;1,700&family=Permanent+Marker&family=Quicksand:wght@700&family=Staatliches&display=swap" rel="stylesheet"> 
 <style>
 
+html{
+    background-color: rgb(47,62,70);
+    text-align: center;
+}
+
+h1 {
+    font-size: 100px;
+    color: rgba(255,255,255, .8);
+    height: 100vh;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100vw;
+
+}
+
 h1:nth-of-type(1) {
 font-family: 'Alatsi', sans-serif;
 }
@@ -30,8 +47,8 @@ font-family: 'Staatliches', cursive;
 
 </style>
 
-<h1>Minimalist <em>with Pop</em></h1>
-<h1>Minimalist <em>with Pop</em></h1>
-<h1>Minimalist <em>with Pop</em></h1>
-<h1>Minimalist <em>with Pop</em></h1>
-<h1>Minimalist <em>with Pop</em></h1>
+<h1>Minimalist with Pop</h1>
+<h1>Minimalist with Pop</h1>
+<h1>Minimalist with Pop</h1>
+<h1>Minimalist with Pop</h1>
+<h1>Minimalist with Pop</h1>
