Adds updated practice file.

--- a/design_practice.html
+++ b/design_practice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset = "utf-8">
 <title> Pratice</title>
-<link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="style_jm_1.css">
 
 
 
@@ -9,7 +9,7 @@
 
 <p> We acknowledge that the land where we learn and work is the ancestral homeland and traditional territory of the Monacan Indian Nation. We pay respect to their elders and knowledge keepers – past and present. We acknowledge and pay respect to the enslaved Africans, enslaved laborers, and free Black laborers who built the University of Virginia, as well as their descendants </p>
 
-<h4> This charter is a living document that will evolve as we grow together as a community. As is the case with all collective endeavors, many people and places nourish and inform our desire to cultivate accessible and equitable spaces of collective care, playful experimentation, and common good. Our acknowledgements section credits their contributions. </h4>
+<p class = "emphasize"> This charter is a living document that will evolve as we grow together as a community. As is the case with all collective endeavors, many people and places nourish and inform our desire to cultivate accessible and equitable spaces of collective care, playful experimentation, and common good. Our acknowledgements section credits their contributions. </p>
 
 <h2> Ethos </h2>
 <ul>
