Adds font document.

--- a/fonts.html
+++ b/fonts.html
@@ -4,8 +4,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Bevan&family=Josefin+Sans:ital,wght@0,100;0,700;1,700&family=Permanent+Marker&family=Quicksand:wght@700&family=Staatliches&display=swap" rel="stylesheet"> 
 <style>
 
+html, body {
+    margin: 0; 
+    padding: 0;
+}
 html{
-    background-color: rgb(47,62,70);
     text-align: center;
 }
 
@@ -18,31 +21,34 @@ h1 {
     justify-content: center;
     margin: 0 auto;
     width: 100vw;
-
+    font-variant: small-caps;
+    letter-spacing: 3px;
+    font-weight: normal;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 h1:nth-of-type(1) {
-font-family: 'Alatsi', sans-serif;
+    background-color: rgb(47,62,70);
 }
 
 h1:nth-of-type(2) {
-font-family: 'Bevan', cursive;
+    background-color: rgb(82,121,111);
 }
 
 h1:nth-of-type(3) {
-font-family: 'Josefin Sans', sans-serif;
+    background-color: rgb(196, 212, 115);
 }
 
 h1:nth-of-type(4) {
-font-family: 'Permanent Marker', cursive;
+    background-color: rgb(164,74,63);
 }
 
 h1:nth-of-type(5) {
-font-family: 'Quicksand', sans-serif;
+    background-color: rgb(237,155,64);
 }
 
 h1:nth-of-type(6) {
-font-family: 'Staatliches', cursive;
+    background-color: rgb(97,201,168);
 }
 
 </style>
