Updates style sheet and index.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Bevan&family=Josefin+Sans:ital,wght@0,100;0,700;1,700&family=Permanent+Marker&family=Quicksand:wght@700&family=Staatliches&display=swap" rel="stylesheet"> 
+<link rel = "stylesheet" href = "style.css">
+ 
 <h1>HTML Workshop</h1>
 
 <h2>Headings</h2>
