Adds landmark elements.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Bevan&family=Josefin+Sans:ital,wght@0,100;0,700;1,700&family=Permanent+Marker&family=Quicksand:wght@700&family=Staatliches&display=swap" rel="stylesheet"> 
 <link rel = "stylesheet" href = "style.css">
  
-<h1>HTML Workshop</h1>
+<header role="banner">
+    <h1>HTML Workshop</h1>
+</header>
 
-<h2>Headings</h2>
-
-<h1>Level One</h1>
-<h2>Level Two</h2>
-<h3>Level Three</h3>
-<h4>Level Four</h4>
-<h5>Level Five</h5>
-<h6>Level Six</h6>
-
-<h2>Paragraphs</h2>
+<main>
+    <section id="intro">
+        <h2>Headings</h2>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sin dicit obscurari quaedam nec apparere, quia valde parva sint, nos quoque concedimus; Tria genera bonorum; Sic enim censent, oportunitatis esse beate vivere. Indicant pueri, in quibus ut in speculis natura cernitur. Duo Reges: constructio interrete. Itaque ad tempus ad Pisonem omnes.</p>
 
@@ -30,7 +25,9 @@
     <li>Nos paucis ad haec additis</li>
     <li>Sine ea igitur iucunde negat posse se vivere?</li>
 </ul>
+</section>
 
+<section id="chance-events">
 <h3>Ordered</h3>
 
 <ol>
@@ -41,23 +38,12 @@
     <li>Sine ea igitur iucunde negat posse se vivere?</li>
 </ol>
 
-Nested
-
-Sin kakan malitiam dixisses, ad aliud nos unum certum vitium consuetudo Latina traduceret.
-Nos paucis ad haec additis finem faciamus aliquando;
-Sine ea igitur iucunde negat posse se vivere?
-Si est nihil nisi corpus, summa erunt illa: valitudo, vacuitas doloris, pulchritudo, cetera.
-Addo etiam illud, multa iam mihi dare signa puerum et pudoris et ingenii, sed aetatem vides.
-Tum ille: Tu autem cum ipse tantum librorum habeas, quos hic tandem requiris?
-Nam si quae sunt aliae, falsum est omnis animi voluptates esse e corporis societate.
-Negare non possum.
-Bonum liberi: misera orbitas.
-
 <h2>Blockquotes</h2>
 
 <blockquote>Live your life. It depends on how you were raised.</blockquote>
+</section>
 
-
+<section id="nextsteps">
 <h2>Tables</h2>
 
 <table>
@@ -78,3 +64,8 @@ Bonum liberi: misera orbitas.
     <td>Hufflepuff</td>
 </tr>
 </table>
+</section>
+</main>
+<footer role="contentinfo">
+    Email me!
+</footer>
